# IBD_Cohort_Size_Estimation_IC-IBD_Study_Part_1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
final_model/: bias_metrics.json  final_ibd_size_estimate.txt  final_model.pkl
jaccard_index_size_estimator/: jaccard_index_cohort_size_estimator.py
log_reg_size_estimator/: 1_split_data.py  2_preprocess.py  3_feature_selection.py  4_train_model.py  5_evaluate_model.py  6_predict_total_ibd.py  7_bias_analysis.py  8_final_estimate.py  run_pipeline.py
sample_size_estimation/: original_incorrect_pate_and_riley_sample_size_estimator.py  riley_shrinkage_based_sample_size_estimator.py  sample_size_estimator.py
